# protoc-gen-ets

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml
docs/: options.md
examples/protobufjs/: .gitignore  package-lock.json
examples/protobufjs/pb/basic/v1/: settings.proto
examples/protobufjs/proto_1/: proto_1.proto
examples/serde/: help.ets  help.proto
infra/: compile.sh
js/plugin/: README.md  main.js  package.json
js/runtime/PbShell/: build-profile.json5
js/runtime/PbShell/AppScope/: app.json5
js/runtime/PbShell/AppScope/resources/base/element/: string.json
js/runtime/PbShell/ohos_pb/: CHANGELOG.md  Index.ets  LICENSE  README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
js/runtime/PbShell/ohos_pb/src/main/: module.json5
js/runtime/PbShell/ohos_pb/src/ohosTest/: module.json5
js/runtime/lark/: base.ts
src/: collector.rs  context.rs  emit.rs  export.rs  lib.rs  macros.rs  main.rs  options.rs
src/common/: enum.rs  field.rs  field_type.rs  file.rs  json.rs  message.rs  message_type.rs  mod.rs  oneof.rs  wire.rs
src/compile/: mod.rs
src/context/: util.rs
src/runtime/: mod.rs
src/runtime/lark/: mod.rs
src/runtime/lark/protobuf_js/: codec.rs  common.rs  ctor.rs  deserialize.rs  mod.rs  serialize.rs
tests/: enum.rs
tests/helper/: unit.rs
